--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "typescript",
-    "author": "Microsoft Corp.",
+    "name": "protozoa-tsx",
+    "author": "Gus Cost",
     "homepage": "http://typescriptlang.org/",
     "version": "2.3.4",
-    "license": "Apache-2.0",
-    "description": "TypeScript is a language for application scale JavaScript development",
+    "license": "MIT",
+    "description": "TypeScript is a language for application scale JavaScript development (now with Protozoa support)",
     "keywords": [
         "TypeScript",
         "Microsoft",
